Fix credit line overflow

--- a/style.css
+++ b/style.css
@@ -3,11 +3,12 @@
 
 #main-container {
 	background-color: white;
+	display: flex;
 }
 
 .img-container {
 	height: 100vh;
-	width: 504px;
+	width: 504	px;
 	background-image: url(img/form-image.avif);
 }
 
@@ -18,8 +19,9 @@
 #credit {
 	color: white;
 	text-align: center;
-	position: relative;
+	position: absolute;
 	top: 95vh;
+	left: 120px;
 }
 
 #credit > a {
